--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
             <div class="product-card slider-card">
                 <div class="slider-container">
                     <div class="slider" data-index="0">
-                        <img src="./images/3-d1.png" alt="3D Çanta 1">
-                        <img src="./images/3-d2.png" alt="3D Çanta 2">
+                        <img src="./images/3-d1-.png" alt="3D Çanta 1">
+                        <img src="./images/3-d2-.png" alt="3D Çanta 2">
                         <img src="./images/3-d3.png" alt="3D Çanta 3">
                         <img src="./images/3-d4.png" alt="3D Çanta 1">
                         <img src="./images/3-d5.png" alt="3D Çanta 2">
